# LidarBaslerMapper

./: .gitignore  CMakeLists.txt  FindPylon.cmake  Makefile
BaslerCalibration/: CMakeLists.txt  basler_config.h  calibrate_camera.cpp  capture_images.cpp  main.cpp
BaslerCalibration/cmake/: FindPylon.cmake
CaptureLidarBuffered/: CMakeLists.txt  LidarCapture.cpp  LidarCapture.h  py-mapper.cpp
ImagePCDGrabber/: CMakeLists.txt  capture_basler.cpp  capture_lidar.cpp  main.cpp
LiveView/: CMakeLists.txt  captureBasler.cpp  captureLidar.cpp  main.cpp
Mapper/: CMakeLists.txt  loadCalib.cpp  loadCalib.h  main.cpp  projectPoints.cpp  projectPoints.h  turbo_colormap.c  turbo_colormap.h
calib/: basler_calib.yaml  config.yaml  extrinsic_good_hallwat.txt
pymapper/: main.py
src/: basler.cpp  basler.h  image_chunk.cpp  image_chunk.h  main.cpp
